Menu Detail bug where name of item was covered by image background

--- a/components/MenuSection/MenuDetail/MenuDetail.module.scss
+++ b/components/MenuSection/MenuDetail/MenuDetail.module.scss
@@ -21,6 +21,7 @@
     width: 100%;
     max-width: 300px;
     height: 100px;
+    z-index: 0;
   }
   
   .content {
